# QtVTKTutorial

./: CMakeLists.txt  README.md
forms/: MainWindow.ui
include/: MainWindow.h
src/: MainWindow.cpp  main.cpp
